--- a/WindowExplorer/Sources/Controllers/RecordViewController/Views/MediaItemView.xib
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Views/MediaItemView.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="MediaItemView" customModule="WindowExplorer" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="MediaItemView" customModuleProvider="target">
             <connections>
                 <outlet property="mediaImageView" destination="qFx-mJ-ye3" id="wSN-K9-1ET"/>
                 <outlet property="titleLabelBackgroundHeight" destination="zWD-jR-AWQ" id="rQf-u9-4Yx"/>
